removed the possibility to modify the controller bcs it isn't working using scripts