@@ -6,7 +6,7 @@
 
     <groupId>org.lebastudios.theroundtable</groupId>
     <artifactId>fxml2java</artifactId>
-    <version>0.2.2</version>
+    <version>0.3.0</version>
     <name>fxml2java</name>
 
     <properties>
@@ -47,13 +47,6 @@
                     <source>22</source>
                     <target>22</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArgs>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-exports=>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
